fix: comment out color-scheme and dark mode media query in CSS for clarity; adjust padding in main section for improved layout

--- a/src/index.css
+++ b/src/index.css
@@ -3,7 +3,7 @@
   line-height: 1.5;
   font-weight: 400;
 
-  color-scheme: light dark;
+  /* color-scheme: light dark; */
   /* color: rgba(255, 255, 255, 0.87); */
   color: #111111;
   background-color: lightblue;
@@ -23,7 +23,7 @@ body {
   overflow-x: hidden;
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   :root {
     color: #111111;
     background-color: lightblue;
@@ -33,4 +33,4 @@ body {
     background-color: lightblue;
     color: #111111;
   }
-}
+} */
