--- a/src/styles/mainSection.css
+++ b/src/styles/mainSection.css
@@ -10,7 +10,7 @@
   justify-content: start;
   align-items: center;
 
-  padding: 0.5rem;
+  padding: 1.5rem;
   box-sizing: border-box;
   color: #1e3a8a;
   font-family: Arial, sans-serif;
